feat: 添加删除用户功能
